2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Add missing gdkmm dependency to pkg-config file

	* gtk/gtkmm-2.4.pc.in (Requires): List @GDKMM_MODULE_NAME@ as
	a dependency, since it is not among @GTKMM_MODULES@ already.
	* gtk/gtkmm-2.4-uninstalled.in (Requires): Use @GTKMM_MODULES@
	again instead of @GDKMM_MODULES@.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Update and clean up g[dt]kmmconfig.h

	* gdk/gdkmmconfig.h.in (GDKMM_*_VERSION): Add #undef statements
	for the version number component macros.
	* gtk/gtkmmconfig.h.in: Clean up and copy #undef statements from
	the config.h.in file generated by autoheader.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Provide pkg-config files for uninstalled use

	* atk/atkmm-1.6-uninstalled.pc.in: New pkg-config metadata file
	for building against a non-installed library.
	* gdk/gdkmm-2.4-uninstalled.pc.in: ditto,
	* gtk/gtkmm-2.4-uninstalled.pc.in: ditto.
	* configure.ac (GTKMM_REQ_ATKMM): Rename from GTKMM_PC_ATKMM_DEP.
	(GTKMM_REQ_ATKMM_UNINST): Add variant for the uninstalled library.
	(AC_CONFIG_FILES): List new *-uninstalled.pc output files.
	* gtk/gtkmm-2.4.pc.in (Requires): Substitute @GTKMM_REQ_ATKMM@.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Simplify and update for recent mm-common

	* configure.ac: Insert MM_PREREQ([0.4]) macro call.
	(MM_INIT_MODULE): Omit now optional second argument.
	* atk/atkmm-1.6.pc.in, {gdk,gtk}/{gdk,gtk}mm-2.4.pc.in (htmlrefpub):
	Append trailing slash to URL, as per new mm-common recommendation.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Get rid of obsolete GLIBMM_USING_STD()

	* gtk/gtkmm/treemodelcolumn.h: Stop using GLIBMM_USING_STD(), now
	that it has been removed from glibmm.
	* gtk/src/{textbuffer,treeiter,treepath}.hg: ditto.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Rename scripts/ to build/ for consistency

	* build/: Rename directory from scripts/ for consistency with the