@@ -85,14 +85,13 @@ AC_ARG_ENABLE([deprecated-api],
 AS_IF([test "x$gtkmm_deprecated_api" != xno],
 [
   AC_MSG_NOTICE([[Deprecated API will be built, for backwards-compatibility.]])
-  DISABLE_DEPRECATED_API_CFLAGS=dnl
 ], [
   AC_MSG_WARN([[Deprecated API will not be built, breaking compatibility.
 Do not use this option for distribution packages.]])
-  DISABLE_DEPRECATED_API_CFLAGS='dnl
--DATKMM_DISABLE_DEPRECATED=1 -DGDKMM_DISABLE_DEPRECATED=1 -DGTKMM_DISABLE_DEPRECATED=1'dnl
+  AC_DEFINE([ATKMM_DISABLE_DEPRECATED], [1], [Define to omit deprecated API from atkmm.])
+  AC_DEFINE([GDKMM_DISABLE_DEPRECATED], [1], [Define to omit deprecated API from gdkmm.])
+  AC_DEFINE([GTKMM_DISABLE_DEPRECATED], [1], [Define to omit deprecated API from gtkmm.])
 ])
-AC_SUBST([DISABLE_DEPRECATED_API_CFLAGS])
 AM_CONDITIONAL([DISABLE_DEPRECATED_API], [test "x$gtkmm_deprecated_api" = xno])
 
 # Offer the ability to omit some API from the library, to reduce the code size.
