@@ -1,8 +1,9 @@
 #ifndef _GDKMM_CONFIG_H
-#define _GDKMM_CONFIG_H 1
+#define _GDKMM_CONFIG_H
 
-#include <glibmmconfig.h>
+#include <pangommconfig.h>
 
+/* Define to omit deprecated API from gdkmm. */
 #undef GDKMM_DISABLE_DEPRECATED
 
 /* Major version number of gdkmm. */
@@ -14,4 +15,4 @@
 /* Minor version number of gdkmm. */
 #undef GDKMM_MINOR_VERSION
 
-#endif /* _GDKMM_CONFIG_H */
+#endif /* !_GDKMM_CONFIG_H */
