@@ -6,6 +6,9 @@
 /* Defined when the --enable-api-atkmm configure argument was given */
 #undef GTKMM_ATKMM_ENABLED
 
+/* Define to omit deprecated API from gtkmm. */
+#undef GTKMM_DISABLE_DEPRECATED
+
 /* Defined when the --enable-maemo-extensions configure argument was given */
 #undef GTKMM_MAEMO_EXTENSIONS_ENABLED
 
@@ -40,6 +43,4 @@
 # define GTKMM_API
 #endif /* GTKMM_DLL */
 
-#undef GTKMM_DISABLE_DEPRECATED
-
-#endif /* _GTKMM_CONFIG_H */
+#endif /* !_GTKMM_CONFIG_H */
