@@ -1,5 +1,16 @@
 2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>
 
+	Define *_DISABLE_DEPRECATED in config header
+
+	* configure.ac ({ATK,GDK,GTK}MM_DISABLE_DEPRECATED): Go back to
+	AC_DEFINE() instead of setting DISABLE_DEPRECATED_API_CFLAGS to
+	a list of -D options to pass to the compiler.
+	* gdk/gdkmmconfig.h.in (GDKMM_DISABLE_DEPRECATED): Copy #undef
+	statement from the config.h.in generated by autoheader.
+	* gtk/gtkmmconfig.h.in (GTKMM_DISABLE_DEPRECATED): ditto.
+
+2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>
+
 	Add missing gdkmm dependency to pkg-config file
 
 	* gtk/gtkmm-2.4.pc.in (Requires): List @GDKMM_MODULE_NAME@ as
